fix pages alignment in nav bar

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -7,7 +7,7 @@
     display: flex;
     padding: 1rem 8rem;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: center;
     position: relative;
     background-color: white;
     z-index: 1000;
@@ -22,6 +22,7 @@
 
     &__desktop {
         display: flex;
+        align-items: center;
         gap: 2rem;
 
         &--page {
@@ -138,8 +139,8 @@
     &__bg {
         &--right {
             position: absolute;
-            top: -6.875rem;
-            right: -2rem;
+            top: -5rem;
+            right: -3rem;
         }
 
         &--left {
@@ -151,8 +152,8 @@
 
     &__photo {
         margin-left: 1rem;
-        width: 33.75rem;
-        height: 40.625rem;
+        width: 33rem;
+        height: 40rem;
     }
 
     &__copy {
